--- a/src/app/components/bootstrap-page/bootstrap-page.component.html
+++ b/src/app/components/bootstrap-page/bootstrap-page.component.html
@@ -24,14 +24,14 @@
                     <tr>
                         <td>1</td>
                         <td></td>
-                        <td>Responsiv design: Bootstrap har responsiva i först hand för att enkelt skapa webbsidor som anpassar sig till olika enheter.</td>
+                        <td>Bootstrap har responsiva i först hand för att enkelt skapa webbsidor som anpassar sig till olika enheter.</td>
                         <td>På grund av att Bootstrap innehåller många koder kan filstorlekarna bli  stora och det kan ha en effekt på laddningstiderna för webbsidor.</td>
                     </tr>
                     <tr class="table-light">
                         <td>2</td>
                         <td></td>
                         <td>bootstrap har färdiga komponenter som tabeller, knappar, navigeringsbar, formulär med mera, som tilllåter oss att spara tiden vid utveckling av webbsidor.</td>
-                        <td>Om du väljer att använd stilmallen Bootstrap kan din webbsidas utseende kännas standard och riskera att likna många andra webbsidor. </td>
+                        <td>Om du väljer att använd stilmallen Bootstrap kan din webbsidas utseende kännas standard och riskera eller kommer att likna många andra webbsidor. </td>
                     </tr>
                     <tr>
                         <td>3</td>
