--- a/src/app/components/tailwind-page/tailwind-page.component.html
+++ b/src/app/components/tailwind-page/tailwind-page.component.html
@@ -23,38 +23,41 @@
         </ul>
     </div>
     <div class="w-1/2 mt-6 full-width-on-small overflow-y-auto ">
-        <h5 class="h5 py-2">Tailwind ramverk: </h5>
+        <h5 class="h5 py-2">Tabel med Tailwind ramverk: </h5>
         
             <table class="md:table-fixed w-full text-sm text-left border-collapse border border-slate-500">
               <thead class="bg-slate-200">
                 <tr>
                   <th class="px-6 py-3 text-slate-700 border border-slate-600">#</th>
-                  <th class="px-6 py-3 text-slate-700 border border-slate-600">City</th>
-                  <th class="px-6 py-3 text-slate-700 border border-slate-600">City</th>
-                  <th class="px-6 py-3 text-slate-700 border border-slate-600">City</th>
+                  <th class="px-6 py-3 text-slate-700 border border-slate-600">Land</th>
+                  <th class="px-6 py-3 text-slate-700 border border-slate-600">Stad</th>
+                  <th class="px-6 py-3 text-slate-700 border border-slate-600">Gata</th>
                 </tr>
               </thead>
               <tbody class="divide-y divide-slate-300">
                 <tr class="bg-white hover:bg-slate-100">
                   <td class="px-6 py-4 border border-slate-700">1</td>
-                  <td class="px-6 py-4 border border-slate-700">Indianapolis</td>
-                  <td class="px-6 py-4 border border-slate-700">Indianapolis</td>
-                  <td class="px-6 py-4 border border-slate-700">Indianapolis</td>
+                  <td class="px-6 py-4 border border-slate-700">Sweden</td>
+                  <td class="px-6 py-4 border border-slate-700">Helsingborg</td>
+                  <td class="px-6 py-4 border border-slate-700">Södra Storgatan</td>
                 </tr>
                 <tr class="bg-slate-50 hover:bg-slate-100">
-                  <td class="px-6 py-4 border border-slate-700">Ohio</td>
+                  <td class="px-6 py-4 border border-slate-700">2</td>
+                  <td class="px-6 py-4 border border-slate-700">USA</td>
                   <td class="px-6 py-4 border border-slate-700">Columbus</td>
-                  <td class="px-6 py-4 border border-slate-700">Columbus</td>
+                  <td class="px-6 py-4 border border-slate-700">Broad Street</td>
                 </tr>
                 <tr class="bg-white hover:bg-slate-100">
-                  <td class="px-6 py-4 border border-slate-700">Michigan</td>
+                  <td class="px-6 py-4 border border-slate-700">3</td>
+                  <td class="px-6 py-4 border border-slate-700">USA</td>
                   <td class="px-6 py-4 border border-slate-700">Detroit</td>
-                  <td class="px-6 py-4 border border-slate-700">Detroit</td>
+                  <td class="px-6 py-4 border border-slate-700">Woodward Avenue</td>
                 </tr>
-                <tr class="bg-white hover:bg-slate-100">
-                  <td class="px-6 py-4 border border-slate-700">Michigan</td>
-                  <td class="px-6 py-4 border border-slate-700">Detroit</td>
-                  <td class="px-6 py-4 border border-slate-700">Detroit</td>
+                <tr class="bg-slate-50 hover:bg-slate-100">
+                  <td class="px-6 py-4 border border-slate-700">4</td>
+                  <td class="px-6 py-4 border border-slate-700">Canada</td>
+                  <td class="px-6 py-4 border border-slate-700">Toronto</td>
+                  <td class="px-6 py-4 border border-slate-700">Yonge Street</td>
                 </tr>
               </tbody>
             </table>
